xss prevention and bug fixes

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,11 +1,12 @@
 <% @title = "メモ編集" %>
 
 <h1>メモ編集</h1>
-<form action="/memos/<%= @memo['id'] %>" method="post">
+<form action="/memos/<%= h(@memo['id']) %>" method="post">
+  <input type="hidden" name="_method" value="patch">
   <p>タイトル:</p>
-  <input type="text" name="title" value="<%= @memo['title'] %>" maxlength="50">
+  <input type="text" name="title" value="<%= h(@memo['title']) %>" maxlength="50">
   <p>内容:</p>
-  <textarea name="content" maxlength="500"><%= @memo['content'] %></textarea>
+  <textarea name="content" maxlength="500"><%= h(@memo['content']) %></textarea>
   <button type="submit">更新</button>
   <a href="/memos">戻る</a>
 </form>
