--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
 <ul class="memo-list">
   <% @memos.each do |memo| %>
     <li>
-      <a href="/memos/<%= memo['id'] %>"><%= memo['title'] %></a>
+      <a href="/memos/<%= h(memo['id']) %>"><%= h(memo['title']) %></a>
     </li>
   <% end %>
 </ul>
